gaming trend for arrekz

--- a/pages/others.html
+++ b/pages/others.html
@@ -22,6 +22,9 @@
         <h2 class="item" box-sizing="border-box"><a href="others.html">🎊 Others</a></h2>
     </div>
     <div class="essay-section" box-sizing="border-box">
+        <button class = "games">
+            <a class = "game-font" href="gaming-trends.html">Gaming Trends</a>
+        </button>
         <h1 class="essay-title" box-sizing="border-box">Others</h1><br>
         <table box-sizing="border-box">
             <tbody box-sizing="border-box">
