--- a/pages/gaming-trends.html
+++ b/pages/gaming-trends.html
@@ -25,7 +25,7 @@
             </script>
         <!-- End Inspectlet Asynchronous Code -->
 </head>
-<body class="body-section trend-page">
+<body class="trend-page">
     <div class="trends">
         <button>
             <h2 class = "black-text"><a href = "https://trends.google.com/trends/explore?cat=8&date=today%201-m">Google Trends Related to Gaming👈🏻</a></h2>
