--- a/pages/gaming-trends.html
+++ b/pages/gaming-trends.html
@@ -28,7 +28,7 @@
 <body class="trend-page">
     <div class="trends">
         <button>
-            <h2 class = "black-text"><a class = "black-text" href = "https://trends.google.com/trends/explore?cat=8&date=today%201-m">Google Trends Related to Gaming👈🏻</a></h2>
+            <h2 ><a href = "https://trends.google.com/trends/explore?cat=8&date=today%201-m">Google Trends Related to Gaming👈🏻</a></h2>
         </button>
         <h1> Google Trends - Search Topics Related to Games in last 30 days - Worldwide</h1>
         <script class = "google-trends" type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/3045_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("RELATED_TOPICS", {"comparisonItem":[{"geo":"","time":"today 1-m"}],"category":8,"property":""}, {"exploreQuery":"cat=8&date=today%201-m","guestPath":"https://trends.google.com:443/trends/embed/"}); </script>
