--- a/pages/feeld.html
+++ b/pages/feeld.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feeld</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body class="body-section">
-    <img scr="../assets/Current Subscription Model.png">
-    <img scr="../assets/Revised Subscription Model.png">
-    <img scr="../assets/User Base.png">
+    <div class="feeld-image">
+        <img class="feeld" scr="../assets/current_subscription.png">
+        <img class="feeld" scr="../assets/revised_subscription.png">
+        <img class="feeld" scr="../assets/user_base.png">
+    </div>
 </body>
 </html>
